k8s/apps/plex/app/middleware-no-x-frowarded-for.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: no-x-forwarded-for
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: "" # Remove
    customResponseHeaders:
      X-Forwarded-For: "" # Remove
