k8s/apps/plex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  labels:
    app.kubernetes.io/name: plex
    ingress.thaum.xyz/probe: enabled
    homer.rajsingh.info/enabled: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # / answers 401 to a non-browser UA; /identity needs no token.
    ingress.thaum.xyz/probe-uri: /identity
    #traefik.ingress.kubernetes.io/router.middlewares: plex-no-x-forwarded-for@kubernetescrd
    item.homer.rajsingh.info/name: "Plex"
    item.homer.rajsingh.info/subtitle: "Video on demand"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/plex.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "80"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
spec:
  ingressClassName: private
  rules:
    - host: vod.krupa.net.pl
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 32400
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vod.krupa.net.pl
      secretName: vod-krupa-net-pl-tls
